<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.tickets.TicketsActivity">

    <TextView
        android:id="@+id/movie_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:padding="12dp"
        android:shadowRadius="5"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:shadowRadius="5"
            android:layout_weight="1"
            android:text="@string/available_tickets_desc"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/available_tickets_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="12dp"
            android:layout_weight="1"
            android:shadowRadius="5"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buy_ticket_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/buy_ticket_btn" />

        <Button
            android:id="@+id/return_ticket_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/return_ticket_btn" />
    </LinearLayout>

</LinearLayout>